--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.1.12
   google_fonts: ^6.1.0 
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
